[package]
name = "psychic-giggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.16", features = ["blocking", "json", "rustls-tls-native-roots"] }
rustls-native-certs = "0.6.3"
rustls = "0.21.2"
x509-parser = "0.15"