[package]
name = "psychic-giggle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { git = "https://github.com/shparun/reqwest-with-logging.git", default-features = false, features = ["blocking", "json", "native-tls", "rustls-tls-native-roots"] }
#reqwest = { path = "C:\\sources\\reqwest-with-logging", default-features = false, features = ["blocking", "json", "native-tls", "rustls-tls-native-roots"]}
rustls-native-certs = "0.6.3"
rustls = "0.21.2"
x509-parser = "0.15"
sha1 = "0.10"
base64 = "0.21.2"
log = "0.4.19"
env_logger = "0.10.0"
